cluster/apps/homelab/monitoring/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: homelab-gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "grafana.martinez-saweczko.es"
  rules:
    - backendRefs:
        - name: monitoring-kube-prometheus-stack-grafana
          port: 80
